# graph-rcnn.pytorch

./: .gitignore  main.py  pyproject.toml
graphrcnn/data/: build.py  collate_batch.py  vg_hdf5.py
graphrcnn/data/evaluation/coco/: coco_eval.py
graphrcnn/data/evaluation/gqa_coco/: gqa_coco_eval.py
graphrcnn/data/evaluation/gqa_voc/: gqa_voc_eval.py
graphrcnn/data/evaluation/voc/: voc_eval.py
graphrcnn/rcnn/engine/: bbox_aug.py  trainer.py
graphrcnn/rcnn/layers/: nms.py  roi_align.py  roi_pool.py  sigmoid_focal_loss.py
graphrcnn/rcnn/layers/dcn/: deform_conv_func.py  deform_pool_func.py
graphrcnn/rcnn/modeling/: registry.py
graphrcnn/rcnn/modeling/backbone/: backbone.py  fbnet.py  fbnet_builder.py  resnet.py
graphrcnn/rcnn/modeling/detector/: generalized_rcnn.py
graphrcnn/rcnn/modeling/relation_heads/: inference.py  loss.py  relation_heads.py  roi_relation_box_feature_extractors.py  roi_relation_box_predictors.py  roi_relation_feature_extractors.py  roi_relation_predictors.py
graphrcnn/rcnn/modeling/relation_heads/reldn/: spatial.py
graphrcnn/rcnn/modeling/relation_heads/relpn/: relpn.py
graphrcnn/rcnn/modeling/roi_heads/box_head/: inference.py  loss.py  roi_box_feature_extractors.py  roi_box_predictors.py
graphrcnn/rcnn/modeling/rpn/: anchor_generator.py  inference.py  loss.py  rpn.py
graphrcnn/rcnn/modeling/rpn/retinanet/: inference.py  loss.py  retinanet.py
